MainActivity with viewBinding.

--- a/app/src/main/res/layout/activity_shop_item.xml
+++ b/app/src/main/res/layout/activity_shop_item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.fragment.app.FragmentContainerView
     android:id="@+id/shop_item_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,3 +8,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:layout="@layout/fragment_shop_item"/>
+</layout>
