--- a/app/src/main/res/layout/item_shop_enabled.xml
+++ b/app/src/main/res/layout/item_shop_enabled.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+        <variable
+            name="shopItem"
+            type="com.tatyanashkolnik.shoppinglist.domain.ShopItem"/>
+    </data>
+
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -23,6 +29,7 @@
 
             <TextView
                 android:id="@+id/tv_name"
+                android:text="@{shopItem.name}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -33,6 +40,7 @@
 
             <TextView
                 android:id="@+id/tv_count"
+                android:text="@{String.valueOf(shopItem.count)}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
